# 42-Nibbler

./: .clean.sh  .cp.sh  .fclean.sh  .rm.sh  .talk.sh  .usage.sh  CMakeLists.txt  Makefile  Nibbler.hpp  NibblerUtils.hpp  TODO.txt  author  build.sh  main.cpp  usage.sh
DummyLib/: DummyLib.cpp  DummyLib.hpp
GlfwLib/: GlfwLib.cpp  GlfwLib.hpp
IMusicPlayer/: IMusicPlayer.hpp
IWindow/: IWindow.hpp
LogicLib/: ArgcArgvManager.cpp  ArgcArgvManager.hpp  Handle.hpp  LogicLib.cpp  LogicLib.hpp  LogicUnit.cpp  LogicUnit.hpp  Snake.cpp  Snake.hpp  SnakeUtils.hpp
Modules/: FindSFML.cmake
NcursesLib/: NcursesLib.cpp  NcursesLib.hpp
SdlLib/: SdlLib.cpp  SdlLib.hpp
SfmlLib/: SfmlLib.cpp  SfmlLib.hpp
SoundLib/: SoundLib.cpp  SoundLib.hpp
Tester/: main.cpp
